<resources>
    <string name="app_name">Culinary Companion</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_title_hint">Enter a title for your recipe</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_hint">Enter the ingredients for your recipe</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_hint">Enter the instructions for your recipe</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="sample_recipe_title">Omelette</string>
    <string name="sample_category">Brunch</string>

    <string-array name="recipe_categories">
        <item>Categories</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Desserts</item>
        <item>Other</item>
    </string-array>
</resources>