<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipe"
            type="co.uk.bbk.culinarycompanion.Recipe" />
    </data>

    <ScrollView
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_recipe_details"
                android:text="@string/recipe_details"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <!-- Recipe Title -->
            <TextView
                android:id="@+id/text_recipe_title"
                android:text="@{recipe.title}"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <!-- Category -->
            <TextView
                android:id="@+id/text_recipe_category"
                android:text="@{recipe.category}"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <!-- Ingredients Section -->
            <TextView
                android:text="@string/ingredients"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <!-- Ingredients -->
            <TextView
                android:id="@+id/text_recipe_ingredients"
                android:text="@{recipe.ingredients}"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:background="@drawable/edittext_box"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <!-- Instructions Section -->
            <TextView
                android:text="@string/instructions"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <!-- Instructions -->
            <TextView
                android:id="@+id/text_recipe_instructions"
                android:text="@{recipe.instructions}"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:background="@drawable/edittext_box"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal">

                <!-- Edit Button -->
                <Button
                    android:id="@+id/button_edit"
                    android:text="@string/edit"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"/>

                <!-- Delete Button -->
                <Button
                    android:id="@+id/button_delete"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>